tests/NormalTests/paczka2/big_fuzzy/69120252.err
Error in line 4: A200 S551 0,9
Error in line 2: LLR S551 5,9
Error in line 3: wqA A144 23,2
Error in line 24: iAW75Yw S551 95,9
Error in line 33: iAW75Yw A144 53,6
Error in line 40: iAW75Yw S551 44,2
Error in line 38: LLR S551 200,2
Error in line 51: 789jZHsjwVk S716 -4,8
Error in line 61: LLR A200 98,1
Error in line 67: LLR A144 9,3
Error in line 73: LLR S716 10,5
Error in line 54: iohfeHw3HOf S551 9,3
Error in line 89: 789jZHsjwVk A200 87,4
Error in line 83: Fd9ifOqoR A144 227,6
Error in line 95: A200 S716 7,8
Error in line 96: LLR A144 1,3
Error in line 77: iAW75Yw A200 282,2
Error in line 104: iohfeHw3HOf S551 38,8
Error in line 109: iohfeHw3HOf S716 32,7
Error in line 110: iohfeHw3HOf A200 32,4
Error in line 122: LLR S551 56,9
Error in line 128: iAW75Yw S551 507,3
Error in line 131: wqA S716 86,2
Error in line 134: LLR S716 10,2
Error in line 149: iAW75Yw S551 91,1
Error in line 156: Fd9ifOqoR S551 53,3
Error in line 163: wqA S551 34,3
Error in line 165: 789jZHsjwVk S716 18,5
Error in line 175: Fd9ifOqoR S716 -2,1
Error in line 158: Fd9ifOqoR S716 376,0
Error in line 177: Fd9ifOqoR A200 88,5
Error in line 179: wqA A200 99,8
Error in line 180: LLR A200 79,7
Error in line 184: iohfeHw3HOf S551 44,3
Error in line 186: LLR A144 38,9
Error in line 190: Fd9ifOqoR A144 166,6
Error in line 192: Fd9ifOqoR S716 5,9
Error in line 193: Fd9ifOqoR A144 39,3
Error in line 188: iohfeHw3HOf A200 67,5
Error in line 194: Fd9ifOqoR S551 2,1
Error in line 203: Fd9ifOqoR S551 58,5
Error in line 201: LLR S716 176,8
Error in line 211: A200 S551 84,5
Error in line 235: wqA A144 33,1
Error in line 240: wqA SX16 -3,2
